--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             responseContainer.style.display = 'none';
             
             try {
-                const response = await fetch('/generate', {
+                const response = await fetch('/api/generate', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
