--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
         <div>
             <label for="model">Select Model:</label>
             <select id="model">
-                <option value="anthropic/claude-3.5-sonnet">Claude 3.5 Sonnet</option>
-                <option value="meta-llama/llama-3.1-405b-instruct">Llama 3.1 405B</option>
-                <option value="google/gemini-1.5-pro">Gemini 1.5 Pro</option>
-                <option value="mistralai/mistral-large">Mistral Large</option>
-                <option value="openai/gpt-4o">GPT-4o</option>
-            </select>
+    <option value="deepseek/deepseek-r1:free">DeepSeek R1 (Free)</option>
+    <option value="qwen/qwen2.5-vl-72b-instruct:free">Qwen 2.5 VL 72B (Free)</option>
+    <option value="deepseek/deepseek-chat:free">DeepSeek Chat (Free)</option>
+    <option value="google/gemini-2.0-flash-exp:free">Google Gemini 2.0 Flash (Free)</option>
+    <option value="google/gemini-2.0-pro-exp-02-05:free">Google Gemini 2.0 Pro (Free)</option>
+    <option value="google/gemini-2.0-flash-thinking-exp:free">Google Gemini 2.0 Flash Thinking (Free)</option>
+    <option value="meta-llama/llama-3.3-70b-instruct:free">Meta Llama 3.3 70B (Free)</option>
+</select>
         </div>
         
         <div>
